fix test method in remove(), change the way to retrieve last element in list